...

  @override
  Widget build(BuildContext context) {
    return ScreenWrapper(
      appBarWidget: ReceiptCommentAppBar(
        formState: formState,
        title: 'Receipt Comments',
        onBack: () => Navigator.of(context).pop(),
        onEditMode: formState == WranglerFormState.view ? () {
          Navigator.of(context).pushReplacement(
            MaterialPageRoute(
              builder: (context) => ReceiptCommentScreen(formState: WranglerFormState.edit),
            ),
...
